# boxes

./: .pre-commit-config.yaml  .travis.yml  Boxes.html  CONTRIBUTING.rst  _setup.py  aasetup.py  apiintro.html  edges.html  genindex.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  searchindex.js  setup.cfg  setup.py  setup234.py
.github/workflows/: docker-publish.yml  pages.yml  precommit.yml  typing.yml
_modules/: boxes.html  index.html
_modules/boxes/: edges.html
boxes/: Color.py  __init__.py  drawing.py  edges.py  extents.py  formats.py  gears.py  lids.py  parts.py  pulley.py  qrcode_factory.py  robot.py  servos.py  svgmerge.py  svgutil.py  vectors.py  walledges.py
boxes/generators/: __init__.py  _swtemplate.py  _template.py  _walltemplate.py  abox.py  agricolainsert.py  alledges.py  angledbox.py  angledcutjig.py  arcade.py  atreus21.py  basedbox.py  bayonetbox.py  beequeencage.py  beequeentransportbox.py  bintray.py  birdhouse.py  bottlestack.py  bottletag.py  breadbox.py  burntest.py  can_storage.py  carbonfilter.py  cardbox.py  cardholder.py  castle.py  clock.py  closedbox.py  coffeecapsulesholder.py  coindisplay.py  concaveknob.py  console.py  console2.py  desksign.py  dicebox.py  dinrailbox.py  discrack.py  dispenser.py  display.py  displaycase.py  (+118 more)
boxes/scripts/: boxes_generator.py  boxes_main.py  boxes_proxy.py  boxesserver.py
documentation/: boxes.xml
documentation/src/: boxes2rst.py  conf.py  index.rst  install.rst
examples/: traylayout.txt
html/: boxes.html  searchindex.js
scripts/: Dockerfile  boxes  boxes.py  boxes2inkscape  boxes2inkscape.py  boxes2pot  boxes2pot.py  boxes_example.ipynb  boxes_proxy.py  boxesserver  gen_data.sh  setup.py
tests/: test_svg.py
